# my_hub

0-路径规划/: 2-Dijkstra.py  navigation2.md
1-ROS2/: launch.json  readme.md
1-ROS2/src/c++/easygo_person_track/bytetrack/: STrack.cpp  STrack.h
1-ROS2/src/c++/easygo_person_track/front_detect/: yolov8_detector.h
1-ROS2/src/c++/easygo_person_track/launch/: easygo_person_track.launch.py  easygo_person_track_with_camera.launch.py
1-ROS2/src/c++/ros2_interfaces/easygo_follow_msgs/: CMakeLists.txt  package.xml
1-ROS2/src/c++/ros2_interfaces/easygo_follow_msgs/srv/: StartFollow.srv
1-ROS2/src/c++/ros2_interfaces/easygo_mapping_msgs/srv/: ApplyMappingStationChange.srv  SyncMappingStations.srv
1-ROS2/src/easygo_person_track/: CMakeLists.txt  command.sh  package.xml
1-ROS2/src/easygo_person_track/bytetrack/: BYTETracker.cpp  BYTETracker.h
1-ROS2/src/easygo_person_track/front_detect/: common.h  yolov8_detector.cpp
1-ROS2/src/easygo_person_track/src/: person_track_node.cpp
1-ROS2/src/ros2_interfaces/easygo_follow_msgs/action/: StartBinding.action
1-ROS2/src/ros2_interfaces/easygo_follow_msgs/msg/: CommandResult.msg  FollowBindConfig.msg  FollowMotionConfig.msg  MotionState.msg  PerceptionEvent.msg  TrackedTarget.msg
1-ROS2/src/ros2_interfaces/easygo_follow_msgs/srv/: StopTracking.srv
1-ROS2/src/ros2_interfaces/easygo_mapping_msgs/: CMakeLists.txt  package.xml
1-ROS2/src/ros2_interfaces/easygo_mapping_msgs/msg/: MappingStation.msg
10-cmake/: readme.md
10-cmake/cmake/packaging/: generate_debian.cmake
2-C++/: command.md
4-Open3D/: bake.py  半径滤波.py  单线雷达处理.py  单线雷达的栈板识别.py  单线雷达通过区域过滤货架腿 copy.py  单线雷达通过区域过滤货架腿.py  单线雷达通过货架腿过滤货架腿.py  处理拖尾算法.py
4-Open3D/data/: 2026-5-25-9-59-41.144.111_fliter_points_in_base.txt  2026-5-28-11-42-43.147.oba_lidar_back_origin.txt  2026-5-28-11-42-43.147.oba_lidar_back_output.txt
4-Open3D/data/区域过滤模式/: 2026-7-2-13-48-59.182.locate_lidar_main_origin.txt  2026-7-2-13-48-59.182.locate_lidar_main_origin_filter.txt  2026-7-2-13-48-59.182.locate_lidar_main_output.txt  2026-7-2-13-48-59.182.locate_lidar_main_points_in_sensor.txt  2026-7-2-13-48-59.182.locate_lidar_main_rack_filter.txt  2026-7-2-13-49-7.182.locate_lidar_sub_origin.txt  2026-7-2-13-49-7.182.locate_lidar_sub_origin_filter.txt  2026-7-2-13-49-7.182.locate_lidar_sub_output.txt  2026-7-2-13-49-7.182.locate_lidar_sub_points_in_sensor.txt  2026-7-2-13-49-7.182.locate_lidar_sub_rack_filter.txt
4-Open3D/data/货架腿过滤模式/: 2026-7-2-13-47-14.182.locate_lidar_sub_origin.txt  2026-7-2-13-47-14.182.locate_lidar_sub_origin_filter.txt  2026-7-2-13-47-14.182.locate_lidar_sub_output.txt  2026-7-2-13-47-14.182.locate_lidar_sub_points_in_sensor.txt  2026-7-2-13-47-14.182.locate_lidar_sub_rack_filter.txt  2026-7-2-13-47-6.182.locate_lidar_main_origin.txt  2026-7-2-13-47-6.182.locate_lidar_main_origin_filter.txt  2026-7-2-13-47-6.182.locate_lidar_main_output.txt  2026-7-2-13-47-6.182.locate_lidar_main_points_in_sensor.txt  2026-7-2-13-47-6.182.locate_lidar_main_rack_filter.txt
5-目标检测和分割/: readme.md
5-目标检测和分割/0-跟踪/bytetrack/: BYTETracker.cpp  BYTETracker.h  utils.cpp
5-目标检测和分割/make_dataset/: make_person_detect_dataset.py  make_person_detect_dataset_s.py
5-目标检测和分割/rknn推理/: infer_by_rknn.cpp  infer_by_rknn.h
5-目标检测和分割/script/: command.sh  dist_train.sh  infer_by_onnx.py  onnx_to_engine.py  train_detect.py
5-目标检测和分割/tracker/: detect_and_botsort.py  detect_and_bytetrack.py  infer.py  infer_by_images.py  yolov11.code-workspace
5-目标检测和分割/tracker/BotSort/: __init__.py  bot_sort.py  byte_tracker.py  ops.py
5-目标检测和分割/tracker/BotSort/utils/: infer_by_rknn.py  main.py  onnx_to_rknn.py  reid_pt_onnx_yolov11n_cls.py  rknn_executor.py
5-目标检测和分割/tracker/ByteTrack/: byte_tracker.py
5-目标检测和分割/yolov26/deploy/: infer_by_onnx.py  infer_by_rknn.py  onnx_to_rknn.py  rknn_executor.py
6-Docker/: docker-compose.yaml  dockerfile_example.dockerfile  use.md
6-Docker/.devcontainer/: devcontainer.json
6-Docker/Orin/: dockercompose.jetpack.yaml  dockerfile.jetpack
7-shell/: readme.md
8-git/: use.md
9-python/: coco2aistudio.py  coco2labelme.py  coco2labelme_bmp.py  coco2lxyxy.py  coco_segment_to_labelme.py  concat_coco.py  concat_labelme.py  concat_labelme_bmp.py  convert_image_type.py  labelme2coco.py  labelme2yolo.py  labelme_to_coco_segment.py  labelme_to_yolo_segment.py  show_coco.py  yolo_to_labelme_segment.py  去除imageData.py  在labelme中找到没有标注的图片.py  查找最合适的score.py  生成json空标注.py
tmp/rack_region_replay_main/: main_filtered.pcd  main_origin.pcd  main_origin_filter.pcd  main_origin_filter_removed.pcd  main_region_replay_filtered.txt  main_region_replay_origin_filter.txt  main_region_replay_origin_filter_removed.txt  main_region_replay_removed.txt  main_removed.pcd
