cmake_minimum_required(VERSION 3.8)
project(easygo_follow_msgs)

find_package(ament_cmake REQUIRED)
find_package(action_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "action/StartBinding.action"
  "msg/CommandResult.msg"
  "msg/FollowBindConfig.msg"
  "msg/FollowMotionConfig.msg"
  "msg/PerceptionEvent.msg"
  "msg/MotionState.msg"
  "msg/TrackedTarget.msg"
  "srv/StartFollow.srv"
  "srv/StopFollow.srv"
  "srv/StopTracking.srv"
  DEPENDENCIES action_msgs builtin_interfaces std_msgs
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
