<?xml version="1.0"?>
<package format="3">
  <name>easygo_follow_msgs</name>
  <version>0.1.0</version>
  <description>ROS 2 interfaces for EasyGo follow perception and motion control.</description>

  <maintainer email="devnull@example.com">EasyGo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
